fix(styles): align multiple select checkbox

--- a/src/ng2-smart-table/ng2-smart-table.scss
+++ b/src/ng2-smart-table/ng2-smart-table.scss
@@ -25,7 +25,7 @@
     }
 
     .ng2-smart-actions {
-      .ng2-smart-action-multiple-select {
+      &.ng2-smart-action-multiple-select {
         text-align: center;
       }
     }
